--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,177 @@
-.container img{
-    height: 20px;
-    width: 20px;
+*{
+    background-color: black;
+    font-weight: lighter;
+    color: white;
+}
+.links{
+    color: blue;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid black;
+}
+.box-container1, .box-cointainer2, .box-container3{
+    flex-grow: 1;
+}
+.box-container1{
+    flex-basis: 200px;
+    border-right: 1px solid white;
+
+}
+.box-cointainer2{
+    border-right: 1px solid white;
+    
+}
+.box-container3{
+    flex-basis: 200px;
+    border-left: 1px solid white;
+}
+.flex-container1{
+    flex-grow: 1;
+    flex-basis: 25%;
+}
+.flex-container2{
+    flex-grow: 1;
+    flex-basis: 45%;
+    border: 1px solid white;
+    margin-right: 20px;
+
+    
+}
+.flex-container3{
+    flex-grow: 1;
+    flex-basis: 30%;
+
+}
+.flex-container4{
+    border: 1px solid white; 
+}
+.navbar{
+    display:flex;
+    flex-direction: column;
+}
+.navbar a{
+    font-style: light;
+    text-decoration: none;
+    line-height: 1.5em;
+    padding: 10px 15px;
+    text-transform: lowercase;
+}
+#b1{
+    float: left;
+    padding: 5px 40px;
+    border-radius: 15px;
+    background-color: #6093f1;
+    font-weight: bold;
+    color: white;
+}
+.profile img{
+    border-radius: 50px;
+}
+#b2{
+    padding: 5px 10px;
+    border-radius: 15px;
+    font-weight: bold;
+    color:white;
+}
+.icons a{
+    padding: 10px 10px;
+    margin-left: 5px;    
+}
+.navigation ul, .navi ul{
+    list-style-type: none;
+    background-color: hwb(0 22% 77% / 0.205);
+    padding: 0;
+    margin: 0;
+   
+}
+.navigation li{
+float: left;
+margin: 2px 120px;
+}
+.navigation a, .navi a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+}
+.navi li{
+float: left;
+margin: 2px 30px;
+
+
+}
+.navi ul{
+    border:1px solid white;
+}
+.content a{
+    text-decoration: none;
+}
+.Trends a{
+    text-decoration: none;
+    line-height: normal;
+}
+.Trends a :hover{
+    padding-block: 50px 100px;
+    background-color: #2b2929cc;
+    color: white;
+}
+#b3, #b5{
+    float: right;
+    padding: 5px 30px;
+    border-radius: 15px;
+    background-color: #6093f1;
+    font-weight: bold;
+    color: white;
+}
+.video video{
+    height: 30%;
+    width: 80%;
+    border-radius: 40px;
+    margin: 40px auto;
+    padding: 20px;
+    max-width: 640px;
+}
+.comments a{
+    padding: 10px 15px;
+    margin-left: 15px;
+}
+.comments a:hover{
+    color: blue;
+    
+}
+.search-form input{
+    border-radius: 20px;
+    height: 40px;
+    width: 100%;
+}
+.article{
+    border: 1px solid white;
+    border-radius: 20px;
+}
+#b4{
+    float: right;
+    padding: 5px 30px;
+    border-radius: 15px;
+    background-color: #6093f1;
+    font-weight: bold;
+    color: white;
+}
+.Trends{
+    border-radius: 20px;
+}
+.messages{
+    border-left: 1px solid white;
+}
+/*#b1, #b2, #b3, #b4 :hover{
+    background-color: rgb(88, 88, 170);
+}*/
+.notes li{
+    list-style-type: none;
+    text-decoration: none;
+}
+.notes a{
+    text-decoration: none;
+
 }
